[package]
name = "rendy-chain"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-chain"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's node synchronization tool"

[dependencies]
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "5b84957d47592969507fb9e9b69810af13098819" }
fnv = "1.0"
log = "0.4"
