[package]
name = "rendy-frame"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
edition = "2018"
repository = "https://github.com/omni-viral/rendy"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rendy-frame"
keywords = ["graphics", "gfx-hal", "rendy"]
categories = ["rendering"]
description = "Rendy's frame synchronization tool"

[dependencies]
derivative = "1.0"
either = "1.5"
gfx-hal = { git = "https://github.com/gfx-rs/gfx", rev = "5b84957d47592969507fb9e9b69810af13098819" }
failure = "0.1"
log = "0.4"
relevant = { version = "0.4", features = ["log", "backtrace"] }
smallvec = "0.6"
rendy-command = { version = "0.1.0", path = "../command" }
rendy-factory = { version = "0.1.0", path = "../factory" }
rendy-memory = { version = "0.1.0", path = "../memory" }
rendy-resource = { version = "0.1.0", path = "../resource" }
